# EKF2

./: .gitignore  AGENTS.md  README.md
RK3588_OrangePi5Plus/: CMakeLists.txt  Makefile  README.md  run.sh
RK3588_OrangePi5Plus/overlay/: README.md
RK3588_OrangePi5Plus/src/: main.c
RK3588_OrangePi5Plus/src/app/: ahrs.c  ahrs.h  altitude.c  altitude.h  sensor_check.c  sensor_check.h
RK3588_OrangePi5Plus/src/bfnav/: bf_position_estimator.c  bf_position_estimator.h  bf_position_filter.c  bf_position_filter.h  sensor_bfnav.c
RK3588_OrangePi5Plus/src/bsp/: bsp.c  bsp.h  delay.h  gpio.c  gpio.h  i2c.c  i2c.h  spi.c  spi.h  uart.c  uart.h
RK3588_OrangePi5Plus/src/drivers/: dps310.c  icm40608.c  qmc5883p.c  sensors.h  ubx_gps.c  ubx_gps.h
RK3588_OrangePi5Plus/src/ekf2/: ekf2_nav.cpp  ekf2_nav.h  sensor_ekf2.c
RK3588_OrangePi5Plus/tools/: bfnav_test.c  spitest.c  ubx_test.c
